# university

./: README.md
cpp-course/assembler/: mul.asm  sub.asm
cpp-course/bigint/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  big_integer.cpp  big_integer.h  constants.h  digit_list.cpp  digit_list.h
cpp-course/bigint/gtest/: gtest.h
cpp-course/bigint_optimized(so+cow)/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  big_data.h  big_data.ipp  big_integer.cpp  big_integer.h  big_integer_testing.cpp  constants.h  data_union.cpp  data_union.h  dynamic_storage.cpp  dynamic_storage.h  dynamic_storage.ipp
cpp-course/bigint_optimized(so+cow)/gtest/: gtest-all.cc  gtest.h
cpp-course/exam/: CMakeLists.txt  circular_buffer.h  testing.cpp
cpp-course/exam/gtest/: gtest-all.cc  gtest.h
cpp-course/huffman/: CMakeLists.txt
cpp-course/huffman/tests/: testing.cpp
cpp-course/huffman/tests/gtest/: gtest-all.cc  gtest.h
cpp-course/huffman/utility/: utility.cpp
cpp-course/practices/P1/: Source.cpp
cpp-course/practices/P2/: vector.h  vector.ipp
paradigms/HW1/src/: CalcMD5.java  CalcSHA256.java
paradigms/HW10/: greeter.jstd  objectExpression.js
paradigms/HW10/test/: objectExpressionTest.js
paradigms/HW12/: linear.clj  project.clj
paradigms/HW12/src/: linear.clj
paradigms/HW13/: expression.clj
paradigms/HW13/src/: expression.clj
paradigms/HW14/src/: expression.clj
paradigms/HW2/src/search/: BinarySearchSpan.java  IterativeSearch.java  RecursiveSearch.java
paradigms/HW3+HW4/src/queue/: AbstractQueue.java  ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  LinkedQueue.java  Queue.java
paradigms/HW3/src/queue/: ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  MainTest.java
paradigms/HW4/src/queue/: AbstractQueue.java  ArrayQueue.java  LinkedQueue.java  LinkedQueueTest.java  Queue.java
paradigms/HW5+HW6/src/expression/: AbstractOperation.java  Add.java  And.java  BitCount.java  Const.java  Divide.java  Multiply.java  Negate.java  Or.java  Subtract.java  Unary.java  Variable.java  Xor.java
paradigms/HW5+HW6/src/test/: BaseTest.java  DoubleExpressionTest.java  Main.java  ParserTest.java
paradigms/HW5/src/expression/: AbstractOperation.java  Add.java  Const.java  Divide.java  ImplicitExpression.java  Main.java  Multiply.java  Subtract.java  Variable.java
paradigms/HW5/src/test/: BaseTest.java  ExpressionTest.java  TripleExpressionTest.java
paradigms/HW7/src/expression/: AbstractOperation.java  And.java  BitCount.java  Const.java  Not.java  Or.java  TripleExpression.java  Variable.java  Xor.java
paradigms/HW7/src/test/: BaseTest.java  Either.java  ExceptionsPowLogTest.java  ExceptionsTest.java  Main.java  ParserTest.java
paradigms/HW8/src/expression/: AbstractOperation.java  BitCount.java  Const.java  Main.java  (+2 more)
paradigms/HW9/: functionalExpression.js
(+48 files in other folders)
